@@ -1,65 +1,85 @@
 package br.com.unicos.ms_auth.service.impl;
 
-import br.com.unicos.ms_auth.dto.AuditoriaAcessoResponse;
+import br.com.unicos.ms_auth.dto.auditoria.AuditoriaAcessoResponse;
+import br.com.unicos.ms_auth.enums.TipoAcaoAcesso;
 import br.com.unicos.ms_auth.model.AuditoriaAcesso;
 import br.com.unicos.ms_auth.repository.AuditoriaAcessoRepository;
 import br.com.unicos.ms_auth.service.AuditoriaAcessoService;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * Implementação da interface {@link AuditoriaAcessoService}.
- * <p>
- * Responsável pelo registro e consulta de eventos de autenticação e auditoria.
+ * Implementação do serviço responsável pelas regras de negócio
+ * relacionadas à auditoria de acesso do sistema.
  */
 @Service
 @RequiredArgsConstructor
 public class AuditoriaAcessoServiceImpl implements AuditoriaAcessoService {
 
     private final AuditoriaAcessoRepository auditoriaAcessoRepository;
-    private final ModelMapper modelMapper;
 
+    /**
+     * Registra um novo evento de auditoria no banco.
+     */
     @Override
-    @Transactional
-    public void registrarEvento(String username, String acao, String detalhes, String ip) {
-        AuditoriaAcesso auditoria = AuditoriaAcesso.builder()
+    public void registrarEvento(String username, TipoAcaoAcesso acao, String detalhes, String ip) {
+        AuditoriaAcesso evento = AuditoriaAcesso.builder()
                 .username(username)
                 .acao(acao)
                 .detalhes(detalhes)
                 .ip(ip)
-                .dataEvento(LocalDateTime.now())
                 .build();
 
-        auditoriaAcessoRepository.save(auditoria);
+        auditoriaAcessoRepository.save(evento);
     }
 
+    /**
+     * Lista todos os eventos associados a um usuário específico.
+     */
     @Override
-    @Transactional(readOnly = true)
     public List<AuditoriaAcessoResponse> listarPorUsuario(String username) {
-        return auditoriaAcessoRepository.findByUsername(username).stream()
-                .map(a -> modelMapper.map(a, AuditoriaAcessoResponse.class))
-                .collect(Collectors.toList());
+        return auditoriaAcessoRepository.findByUsername(username)
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
+    /**
+     * Lista todos os eventos de um tipo de ação específico.
+     */
     @Override
-    @Transactional(readOnly = true)
-    public List<AuditoriaAcessoResponse> listarPorAcao(String acao) {
-        return auditoriaAcessoRepository.findByAcao(acao).stream()
-                .map(a -> modelMapper.map(a, AuditoriaAcessoResponse.class))
-                .collect(Collectors.toList());
+    public List<AuditoriaAcessoResponse> listarPorAcao(TipoAcaoAcesso acao) {
+        return auditoriaAcessoRepository.findByAcao(acao)
+                .stream()
+                .map(this::toResponse)
+                .toList();
     }
 
+    /**
+     * Lista os eventos dentro de um intervalo de tempo.
+     */
     @Override
-    @Transactional(readOnly = true)
     public List<AuditoriaAcessoResponse> listarPorPeriodo(LocalDateTime inicio, LocalDateTime fim) {
-        return auditoriaAcessoRepository.findByDataEventoBetween(inicio, fim).stream()
-                .map(a -> modelMapper.map(a, AuditoriaAcessoResponse.class))
-                .collect(Collectors.toList());
+        return auditoriaAcessoRepository.findByDataEventoBetween(inicio, fim)
+                .stream()
+                .map(this::toResponse)
+                .toList();
+    }
+
+    /**
+     * Converte a entidade AuditoriaAcesso para o DTO AuditoriaAcessoResponse.
+     */
+    private AuditoriaAcessoResponse toResponse(AuditoriaAcesso entity) {
+        return new AuditoriaAcessoResponse(
+                entity.getId(),
+                entity.getUsername(),
+                entity.getAcao(),
+                entity.getDetalhes(),
+                entity.getDataEvento(),
+                entity.getIp()
+        );
     }
 }
